# Faterial

./: .gitignore  CMakeLists.txt  README.md  classes_cpp_h_part01.docx  classes_cpp_h_part01.txt  export_log.csv  export_project.py  export_report.md  project_dump_part01.docx  project_dump_part01.txt  ~$oject_dump_part01.docx
Classes/: main.cpp
Classes/audio/: Sound.cpp  Sound.h
Classes/core/: AppDelegate.cpp  AppDelegate.h  CrashGuard.h  Settings.h
Classes/game/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h  SlashHitbox.cpp  SlashHitbox.h
Classes/game/bosses/: BossGolem.cpp  BossGolem.h
Classes/game/enemies/: Goomba.cpp  Goomba.h  Spiker.cpp  Spiker.h
Classes/game/loot/: LootTable.cpp  LootTable.h
Classes/game/map/: LevelBuilder.cpp  LevelBuilder.h
Classes/game/objects/: Chest.cpp  Chest.h  Coin.cpp  Coin.h  Crate.cpp  Crate.h  Gate.cpp  Gate.h  PressurePlate.cpp  PressurePlate.h  Star.cpp  Star.h  Upgrade.cpp  Upgrade.h
Classes/game/upgrades/: UpgradeSystem.cpp  UpgradeSystem.h
Classes/game/weapon/: Bullet.cpp  Bullet.h  Slash.cpp  Slash.h
Classes/physics/: PhysicsDefs.h
Classes/scenes/: CreditsScene.cpp  CreditsScene.h  EndScene.cpp  EndScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  SettingsScene.cpp  SettingsScene.h
Classes/ui/: HUDLayer.cpp  HUDLayer.h  PauseLayer.cpp  PauseLayer.h
cocos2d/cocos/platform/win32/: CCApplication-win32.cpp
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.ios_mac/mac/: Info.plist
